# s2s

./: .gitignore
src/: .gitignore  pyproject.toml
src/data/: curate.py  dry_run.py  generate_audit.py  ingest_raw.py  normalize_text.py  patch_audio.py  upload_to_hf.py
src/data/test/: normalized_text.txt  text_normalization.py  unnormalized_text.txt
src/models/: audit.py  dataloaders.py  pretokenize.py  run_a100.py  train.py  utils.py
src/models/configs/: shona_finetune.yaml
src/results/: data_curation_audit_report.json
src/train/: train_a100.py
