[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets[audio]>=4.8.2",
    "huggingface-hub>=1.7.1",
    "librosa>=0.11.0",
    "modal>=1.3.5",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "soundfile>=0.13.1",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "webrtcvad>=2.0.10",
]
